parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracao
Rule 2     lista_declaracao -> declaracao LD
Rule 3     LD -> declaracao LD
Rule 4     LD -> empty
Rule 5     declaracao -> declaracao_variaveis
Rule 6     declaracao -> declaracao_funcoes
Rule 7     declaracao_funcoes -> tipo ID apar parametros fpar declaracao_composta
Rule 8     declaracao_variaveis -> tipo ID DV
Rule 9     tipo -> INT
Rule 10    tipo -> VOID
Rule 11    DV -> pv
Rule 12    DV -> acol numero fcol pv
Rule 13    parametros -> apar PR
Rule 14    parametros -> empty
Rule 15    declaracao_composta -> acha declaracoes_locais lista_comandos fcha
Rule 16    PR -> lista_parametros fpar
Rule 17    PR -> VOID fpar
Rule 18    lista_comandos -> LC
Rule 19    lista_parametros -> param LP
Rule 20    LC -> comandos LC
Rule 21    LC -> empty
Rule 22    LP -> vir param LP
Rule 23    LP -> empty
Rule 24    param -> tipo ID P
Rule 25    comandos -> declaracao_expressao
Rule 26    comandos -> declaracao_composta
Rule 27    comandos -> declaracao_selecao
Rule 28    comandos -> declaracao_iteracao
Rule 29    comandos -> declaracao_retorno
Rule 30    P -> acol fcol
Rule 31    P -> empty
Rule 32    declaracao_expressao -> expressao pv
Rule 33    declaracao_expressao -> pv
Rule 34    declaracao_selecao -> IF apar expressao fpar comandos DS
Rule 35    declaracao_iteracao -> WHILE apar expressao fpar comandos
Rule 36    declaracao_retorno -> RETURN DR
Rule 37    expressao -> variavel atr expressao
Rule 38    expressao -> expressao_simples
Rule 39    declaracoes_locais -> DL
Rule 40    DS -> ELSE comandos
Rule 41    DS -> empty
Rule 42    DR -> pv
Rule 43    DR -> expressao pv
Rule 44    variavel -> ID V
Rule 45    expressao_simples -> soma_expressao ES
Rule 46    DL -> declaracao_variaveis DL
Rule 47    DL -> empty
Rule 48    V -> acol expressao fcol
Rule 49    V -> empty
Rule 50    soma_expressao -> termo SE
Rule 51    ES -> op_relacional soma_expressao ES
Rule 52    ES -> empty
Rule 53    termo -> fator T
Rule 54    SE -> soma termo SE
Rule 55    SE -> empty
Rule 56    op_relacional -> menig
Rule 57    op_relacional -> men
Rule 58    op_relacional -> mai
Rule 59    op_relacional -> maiig
Rule 60    op_relacional -> ig
Rule 61    op_relacional -> dif
Rule 62    soma -> add
Rule 63    soma -> sub
Rule 64    mult -> mlt
Rule 65    mult -> divv
Rule 66    fator -> apar expressao fpar
Rule 67    fator -> variavel
Rule 68    fator -> ativacao
Rule 69    fator -> numero
Rule 70    T -> mult fator T
Rule 71    T -> empty
Rule 72    ativacao -> ID apar argumentos fpar
Rule 73    argumentos -> lista_argumentos
Rule 74    argumentos -> empty
Rule 75    lista_argumentos -> expressao LA
Rule 76    LA -> vir expressao LA
Rule 77    LA -> empty
Rule 78    empty -> <empty>

Terminals, with rules where they appear

ELSE                 : 40
ID                   : 7 8 24 44 72
IF                   : 34
INT                  : 9
RETURN               : 36
VOID                 : 10 17
WHILE                : 35
acha                 : 15
acol                 : 12 30 48
add                  : 62
apar                 : 7 13 34 35 66 72
atr                  : 37
dif                  : 61
divv                 : 65
error                : 
fcha                 : 15
fcol                 : 12 30 48
fpar                 : 7 16 17 34 35 66 72
ig                   : 60
mai                  : 58
maiig                : 59
men                  : 57
menig                : 56
mlt                  : 64
numero               : 12 69
pv                   : 11 12 32 33 42 43
sub                  : 63
vir                  : 22 76

Nonterminals, with rules where they appear

DL                   : 39 46
DR                   : 36
DS                   : 34
DV                   : 8
ES                   : 45 51
LA                   : 75 76
LC                   : 18 20
LD                   : 2 3
LP                   : 19 22
P                    : 24
PR                   : 13
SE                   : 50 54
T                    : 53 70
V                    : 44
argumentos           : 72
ativacao             : 68
comandos             : 20 34 35 40
declaracao           : 2 3
declaracao_composta  : 7 26
declaracao_expressao : 25
declaracao_funcoes   : 6
declaracao_iteracao  : 28
declaracao_retorno   : 29
declaracao_selecao   : 27
declaracao_variaveis : 5 46
declaracoes_locais   : 15
empty                : 4 14 21 23 31 41 47 49 52 55 71 74 77
expressao            : 32 34 35 37 43 48 66 75 76
expressao_simples    : 38
fator                : 53 70
lista_argumentos     : 73
lista_comandos       : 15
lista_declaracao     : 1
lista_parametros     : 16
mult                 : 70
op_relacional        : 51
param                : 19 22
parametros           : 7
programa             : 0
soma                 : 54
soma_expressao       : 45 51
termo                : 50 54
tipo                 : 7 8 24
variavel             : 37 67

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracao
    (2) lista_declaracao -> . declaracao LD
    (5) declaracao -> . declaracao_variaveis
    (6) declaracao -> . declaracao_funcoes
    (8) declaracao_variaveis -> . tipo ID DV
    (7) declaracao_funcoes -> . tipo ID apar parametros fpar declaracao_composta
    (9) tipo -> . INT
    (10) tipo -> . VOID

    INT             shift and go to state 7
    VOID            shift and go to state 8

    programa                       shift and go to state 1
    lista_declaracao               shift and go to state 2
    declaracao                     shift and go to state 3
    declaracao_variaveis           shift and go to state 4
    declaracao_funcoes             shift and go to state 5
    tipo                           shift and go to state 6

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declaracao .

    $end            reduce using rule 1 (programa -> lista_declaracao .)


state 3

    (2) lista_declaracao -> declaracao . LD
    (3) LD -> . declaracao LD
    (4) LD -> . empty
    (5) declaracao -> . declaracao_variaveis
    (6) declaracao -> . declaracao_funcoes
    (78) empty -> .
    (8) declaracao_variaveis -> . tipo ID DV
    (7) declaracao_funcoes -> . tipo ID apar parametros fpar declaracao_composta
    (9) tipo -> . INT
    (10) tipo -> . VOID

    $end            reduce using rule 78 (empty -> .)
    INT             shift and go to state 7
    VOID            shift and go to state 8

    declaracao                     shift and go to state 9
    LD                             shift and go to state 10
    empty                          shift and go to state 11
    declaracao_variaveis           shift and go to state 4
    declaracao_funcoes             shift and go to state 5
    tipo                           shift and go to state 6

state 4

    (5) declaracao -> declaracao_variaveis .

    INT             reduce using rule 5 (declaracao -> declaracao_variaveis .)
    VOID            reduce using rule 5 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 5 (declaracao -> declaracao_variaveis .)


state 5

    (6) declaracao -> declaracao_funcoes .

    INT             reduce using rule 6 (declaracao -> declaracao_funcoes .)
    VOID            reduce using rule 6 (declaracao -> declaracao_funcoes .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcoes .)


state 6

    (8) declaracao_variaveis -> tipo . ID DV
    (7) declaracao_funcoes -> tipo . ID apar parametros fpar declaracao_composta

    ID              shift and go to state 12


state 7

    (9) tipo -> INT .

    ID              reduce using rule 9 (tipo -> INT .)


state 8

    (10) tipo -> VOID .

    ID              reduce using rule 10 (tipo -> VOID .)


state 9

    (3) LD -> declaracao . LD
    (3) LD -> . declaracao LD
    (4) LD -> . empty
    (5) declaracao -> . declaracao_variaveis
    (6) declaracao -> . declaracao_funcoes
    (78) empty -> .
    (8) declaracao_variaveis -> . tipo ID DV
    (7) declaracao_funcoes -> . tipo ID apar parametros fpar declaracao_composta
    (9) tipo -> . INT
    (10) tipo -> . VOID

    $end            reduce using rule 78 (empty -> .)
    INT             shift and go to state 7
    VOID            shift and go to state 8

    declaracao                     shift and go to state 9
    LD                             shift and go to state 13
    empty                          shift and go to state 11
    declaracao_variaveis           shift and go to state 4
    declaracao_funcoes             shift and go to state 5
    tipo                           shift and go to state 6

state 10

    (2) lista_declaracao -> declaracao LD .

    $end            reduce using rule 2 (lista_declaracao -> declaracao LD .)


state 11

    (4) LD -> empty .

    $end            reduce using rule 4 (LD -> empty .)


state 12

    (8) declaracao_variaveis -> tipo ID . DV
    (7) declaracao_funcoes -> tipo ID . apar parametros fpar declaracao_composta
    (11) DV -> . pv
    (12) DV -> . acol numero fcol pv

    apar            shift and go to state 15
    pv              shift and go to state 16
    acol            shift and go to state 17

    DV                             shift and go to state 14

state 13

    (3) LD -> declaracao LD .

    $end            reduce using rule 3 (LD -> declaracao LD .)


state 14

    (8) declaracao_variaveis -> tipo ID DV .

    INT             reduce using rule 8 (declaracao_variaveis -> tipo ID DV .)
    VOID            reduce using rule 8 (declaracao_variaveis -> tipo ID DV .)
    $end            reduce using rule 8 (declaracao_variaveis -> tipo ID DV .)
    pv              reduce using rule 8 (declaracao_variaveis -> tipo ID DV .)
    acha            reduce using rule 8 (declaracao_variaveis -> tipo ID DV .)
    IF              reduce using rule 8 (declaracao_variaveis -> tipo ID DV .)
    WHILE           reduce using rule 8 (declaracao_variaveis -> tipo ID DV .)
    RETURN          reduce using rule 8 (declaracao_variaveis -> tipo ID DV .)
    ID              reduce using rule 8 (declaracao_variaveis -> tipo ID DV .)
    apar            reduce using rule 8 (declaracao_variaveis -> tipo ID DV .)
    numero          reduce using rule 8 (declaracao_variaveis -> tipo ID DV .)
    fcha            reduce using rule 8 (declaracao_variaveis -> tipo ID DV .)


state 15

    (7) declaracao_funcoes -> tipo ID apar . parametros fpar declaracao_composta
    (13) parametros -> . apar PR
    (14) parametros -> . empty
    (78) empty -> .

    apar            shift and go to state 18
    fpar            reduce using rule 78 (empty -> .)

    parametros                     shift and go to state 19
    empty                          shift and go to state 20

state 16

    (11) DV -> pv .

    INT             reduce using rule 11 (DV -> pv .)
    VOID            reduce using rule 11 (DV -> pv .)
    $end            reduce using rule 11 (DV -> pv .)
    pv              reduce using rule 11 (DV -> pv .)
    acha            reduce using rule 11 (DV -> pv .)
    IF              reduce using rule 11 (DV -> pv .)
    WHILE           reduce using rule 11 (DV -> pv .)
    RETURN          reduce using rule 11 (DV -> pv .)
    ID              reduce using rule 11 (DV -> pv .)
    apar            reduce using rule 11 (DV -> pv .)
    numero          reduce using rule 11 (DV -> pv .)
    fcha            reduce using rule 11 (DV -> pv .)


state 17

    (12) DV -> acol . numero fcol pv

    numero          shift and go to state 21


state 18

    (13) parametros -> apar . PR
    (16) PR -> . lista_parametros fpar
    (17) PR -> . VOID fpar
    (19) lista_parametros -> . param LP
    (24) param -> . tipo ID P
    (9) tipo -> . INT
    (10) tipo -> . VOID

    VOID            shift and go to state 24
    INT             shift and go to state 7

    PR                             shift and go to state 22
    lista_parametros               shift and go to state 23
    param                          shift and go to state 25
    tipo                           shift and go to state 26

state 19

    (7) declaracao_funcoes -> tipo ID apar parametros . fpar declaracao_composta

    fpar            shift and go to state 27


state 20

    (14) parametros -> empty .

    fpar            reduce using rule 14 (parametros -> empty .)


state 21

    (12) DV -> acol numero . fcol pv

    fcol            shift and go to state 28


state 22

    (13) parametros -> apar PR .

    fpar            reduce using rule 13 (parametros -> apar PR .)


state 23

    (16) PR -> lista_parametros . fpar

    fpar            shift and go to state 29


state 24

    (17) PR -> VOID . fpar
    (10) tipo -> VOID .

    fpar            shift and go to state 30
    ID              reduce using rule 10 (tipo -> VOID .)


state 25

    (19) lista_parametros -> param . LP
    (22) LP -> . vir param LP
    (23) LP -> . empty
    (78) empty -> .

    vir             shift and go to state 32
    fpar            reduce using rule 78 (empty -> .)

    LP                             shift and go to state 31
    empty                          shift and go to state 33

state 26

    (24) param -> tipo . ID P

    ID              shift and go to state 34


state 27

    (7) declaracao_funcoes -> tipo ID apar parametros fpar . declaracao_composta
    (15) declaracao_composta -> . acha declaracoes_locais lista_comandos fcha

    acha            shift and go to state 36

    declaracao_composta            shift and go to state 35

state 28

    (12) DV -> acol numero fcol . pv

    pv              shift and go to state 37


state 29

    (16) PR -> lista_parametros fpar .

    fpar            reduce using rule 16 (PR -> lista_parametros fpar .)


state 30

    (17) PR -> VOID fpar .

    fpar            reduce using rule 17 (PR -> VOID fpar .)


state 31

    (19) lista_parametros -> param LP .

    fpar            reduce using rule 19 (lista_parametros -> param LP .)


state 32

    (22) LP -> vir . param LP
    (24) param -> . tipo ID P
    (9) tipo -> . INT
    (10) tipo -> . VOID

    INT             shift and go to state 7
    VOID            shift and go to state 8

    param                          shift and go to state 38
    tipo                           shift and go to state 26

state 33

    (23) LP -> empty .

    fpar            reduce using rule 23 (LP -> empty .)


state 34

    (24) param -> tipo ID . P
    (30) P -> . acol fcol
    (31) P -> . empty
    (78) empty -> .

    acol            shift and go to state 40
    vir             reduce using rule 78 (empty -> .)
    fpar            reduce using rule 78 (empty -> .)

    P                              shift and go to state 39
    empty                          shift and go to state 41

state 35

    (7) declaracao_funcoes -> tipo ID apar parametros fpar declaracao_composta .

    INT             reduce using rule 7 (declaracao_funcoes -> tipo ID apar parametros fpar declaracao_composta .)
    VOID            reduce using rule 7 (declaracao_funcoes -> tipo ID apar parametros fpar declaracao_composta .)
    $end            reduce using rule 7 (declaracao_funcoes -> tipo ID apar parametros fpar declaracao_composta .)


state 36

    (15) declaracao_composta -> acha . declaracoes_locais lista_comandos fcha
    (39) declaracoes_locais -> . DL
    (46) DL -> . declaracao_variaveis DL
    (47) DL -> . empty
    (8) declaracao_variaveis -> . tipo ID DV
    (78) empty -> .
    (9) tipo -> . INT
    (10) tipo -> . VOID

    pv              reduce using rule 78 (empty -> .)
    acha            reduce using rule 78 (empty -> .)
    IF              reduce using rule 78 (empty -> .)
    WHILE           reduce using rule 78 (empty -> .)
    RETURN          reduce using rule 78 (empty -> .)
    ID              reduce using rule 78 (empty -> .)
    apar            reduce using rule 78 (empty -> .)
    numero          reduce using rule 78 (empty -> .)
    fcha            reduce using rule 78 (empty -> .)
    INT             shift and go to state 7
    VOID            shift and go to state 8

    declaracoes_locais             shift and go to state 42
    DL                             shift and go to state 43
    declaracao_variaveis           shift and go to state 44
    empty                          shift and go to state 45
    tipo                           shift and go to state 46

state 37

    (12) DV -> acol numero fcol pv .

    INT             reduce using rule 12 (DV -> acol numero fcol pv .)
    VOID            reduce using rule 12 (DV -> acol numero fcol pv .)
    $end            reduce using rule 12 (DV -> acol numero fcol pv .)
    pv              reduce using rule 12 (DV -> acol numero fcol pv .)
    acha            reduce using rule 12 (DV -> acol numero fcol pv .)
    IF              reduce using rule 12 (DV -> acol numero fcol pv .)
    WHILE           reduce using rule 12 (DV -> acol numero fcol pv .)
    RETURN          reduce using rule 12 (DV -> acol numero fcol pv .)
    ID              reduce using rule 12 (DV -> acol numero fcol pv .)
    apar            reduce using rule 12 (DV -> acol numero fcol pv .)
    numero          reduce using rule 12 (DV -> acol numero fcol pv .)
    fcha            reduce using rule 12 (DV -> acol numero fcol pv .)


state 38

    (22) LP -> vir param . LP
    (22) LP -> . vir param LP
    (23) LP -> . empty
    (78) empty -> .

    vir             shift and go to state 32
    fpar            reduce using rule 78 (empty -> .)

    LP                             shift and go to state 47
    empty                          shift and go to state 33

state 39

    (24) param -> tipo ID P .

    vir             reduce using rule 24 (param -> tipo ID P .)
    fpar            reduce using rule 24 (param -> tipo ID P .)


state 40

    (30) P -> acol . fcol

    fcol            shift and go to state 48


state 41

    (31) P -> empty .

    vir             reduce using rule 31 (P -> empty .)
    fpar            reduce using rule 31 (P -> empty .)


state 42

    (15) declaracao_composta -> acha declaracoes_locais . lista_comandos fcha
    (18) lista_comandos -> . LC
    (20) LC -> . comandos LC
    (21) LC -> . empty
    (25) comandos -> . declaracao_expressao
    (26) comandos -> . declaracao_composta
    (27) comandos -> . declaracao_selecao
    (28) comandos -> . declaracao_iteracao
    (29) comandos -> . declaracao_retorno
    (78) empty -> .
    (32) declaracao_expressao -> . expressao pv
    (33) declaracao_expressao -> . pv
    (15) declaracao_composta -> . acha declaracoes_locais lista_comandos fcha
    (34) declaracao_selecao -> . IF apar expressao fpar comandos DS
    (35) declaracao_iteracao -> . WHILE apar expressao fpar comandos
    (36) declaracao_retorno -> . RETURN DR
    (37) expressao -> . variavel atr expressao
    (38) expressao -> . expressao_simples
    (44) variavel -> . ID V
    (45) expressao_simples -> . soma_expressao ES
    (50) soma_expressao -> . termo SE
    (53) termo -> . fator T
    (66) fator -> . apar expressao fpar
    (67) fator -> . variavel
    (68) fator -> . ativacao
    (69) fator -> . numero
    (72) ativacao -> . ID apar argumentos fpar

    fcha            reduce using rule 78 (empty -> .)
    pv              shift and go to state 59
    acha            shift and go to state 36
    IF              shift and go to state 60
    WHILE           shift and go to state 62
    RETURN          shift and go to state 63
    ID              shift and go to state 66
    apar            shift and go to state 61
    numero          shift and go to state 71

    lista_comandos                 shift and go to state 49
    LC                             shift and go to state 50
    comandos                       shift and go to state 51
    empty                          shift and go to state 52
    declaracao_expressao           shift and go to state 53
    declaracao_composta            shift and go to state 54
    declaracao_selecao             shift and go to state 55
    declaracao_iteracao            shift and go to state 56
    declaracao_retorno             shift and go to state 57
    expressao                      shift and go to state 58
    variavel                       shift and go to state 64
    expressao_simples              shift and go to state 65
    soma_expressao                 shift and go to state 67
    termo                          shift and go to state 68
    fator                          shift and go to state 69
    ativacao                       shift and go to state 70

state 43

    (39) declaracoes_locais -> DL .

    pv              reduce using rule 39 (declaracoes_locais -> DL .)
    acha            reduce using rule 39 (declaracoes_locais -> DL .)
    IF              reduce using rule 39 (declaracoes_locais -> DL .)
    WHILE           reduce using rule 39 (declaracoes_locais -> DL .)
    RETURN          reduce using rule 39 (declaracoes_locais -> DL .)
    ID              reduce using rule 39 (declaracoes_locais -> DL .)
    apar            reduce using rule 39 (declaracoes_locais -> DL .)
    numero          reduce using rule 39 (declaracoes_locais -> DL .)
    fcha            reduce using rule 39 (declaracoes_locais -> DL .)


state 44

    (46) DL -> declaracao_variaveis . DL
    (46) DL -> . declaracao_variaveis DL
    (47) DL -> . empty
    (8) declaracao_variaveis -> . tipo ID DV
    (78) empty -> .
    (9) tipo -> . INT
    (10) tipo -> . VOID

    pv              reduce using rule 78 (empty -> .)
    acha            reduce using rule 78 (empty -> .)
    IF              reduce using rule 78 (empty -> .)
    WHILE           reduce using rule 78 (empty -> .)
    RETURN          reduce using rule 78 (empty -> .)
    ID              reduce using rule 78 (empty -> .)
    apar            reduce using rule 78 (empty -> .)
    numero          reduce using rule 78 (empty -> .)
    fcha            reduce using rule 78 (empty -> .)
    INT             shift and go to state 7
    VOID            shift and go to state 8

    declaracao_variaveis           shift and go to state 44
    DL                             shift and go to state 72
    empty                          shift and go to state 45
    tipo                           shift and go to state 46

state 45

    (47) DL -> empty .

    pv              reduce using rule 47 (DL -> empty .)
    acha            reduce using rule 47 (DL -> empty .)
    IF              reduce using rule 47 (DL -> empty .)
    WHILE           reduce using rule 47 (DL -> empty .)
    RETURN          reduce using rule 47 (DL -> empty .)
    ID              reduce using rule 47 (DL -> empty .)
    apar            reduce using rule 47 (DL -> empty .)
    numero          reduce using rule 47 (DL -> empty .)
    fcha            reduce using rule 47 (DL -> empty .)


state 46

    (8) declaracao_variaveis -> tipo . ID DV

    ID              shift and go to state 73


state 47

    (22) LP -> vir param LP .

    fpar            reduce using rule 22 (LP -> vir param LP .)


state 48

    (30) P -> acol fcol .

    vir             reduce using rule 30 (P -> acol fcol .)
    fpar            reduce using rule 30 (P -> acol fcol .)


state 49

    (15) declaracao_composta -> acha declaracoes_locais lista_comandos . fcha

    fcha            shift and go to state 74


state 50

    (18) lista_comandos -> LC .

    fcha            reduce using rule 18 (lista_comandos -> LC .)


state 51

    (20) LC -> comandos . LC
    (20) LC -> . comandos LC
    (21) LC -> . empty
    (25) comandos -> . declaracao_expressao
    (26) comandos -> . declaracao_composta
    (27) comandos -> . declaracao_selecao
    (28) comandos -> . declaracao_iteracao
    (29) comandos -> . declaracao_retorno
    (78) empty -> .
    (32) declaracao_expressao -> . expressao pv
    (33) declaracao_expressao -> . pv
    (15) declaracao_composta -> . acha declaracoes_locais lista_comandos fcha
    (34) declaracao_selecao -> . IF apar expressao fpar comandos DS
    (35) declaracao_iteracao -> . WHILE apar expressao fpar comandos
    (36) declaracao_retorno -> . RETURN DR
    (37) expressao -> . variavel atr expressao
    (38) expressao -> . expressao_simples
    (44) variavel -> . ID V
    (45) expressao_simples -> . soma_expressao ES
    (50) soma_expressao -> . termo SE
    (53) termo -> . fator T
    (66) fator -> . apar expressao fpar
    (67) fator -> . variavel
    (68) fator -> . ativacao
    (69) fator -> . numero
    (72) ativacao -> . ID apar argumentos fpar

    fcha            reduce using rule 78 (empty -> .)
    pv              shift and go to state 59
    acha            shift and go to state 36
    IF              shift and go to state 60
    WHILE           shift and go to state 62
    RETURN          shift and go to state 63
    ID              shift and go to state 66
    apar            shift and go to state 61
    numero          shift and go to state 71

    comandos                       shift and go to state 51
    LC                             shift and go to state 75
    empty                          shift and go to state 52
    declaracao_expressao           shift and go to state 53
    declaracao_composta            shift and go to state 54
    declaracao_selecao             shift and go to state 55
    declaracao_iteracao            shift and go to state 56
    declaracao_retorno             shift and go to state 57
    expressao                      shift and go to state 58
    variavel                       shift and go to state 64
    expressao_simples              shift and go to state 65
    soma_expressao                 shift and go to state 67
    termo                          shift and go to state 68
    fator                          shift and go to state 69
    ativacao                       shift and go to state 70

state 52

    (21) LC -> empty .

    fcha            reduce using rule 21 (LC -> empty .)


state 53

    (25) comandos -> declaracao_expressao .

    pv              reduce using rule 25 (comandos -> declaracao_expressao .)
    acha            reduce using rule 25 (comandos -> declaracao_expressao .)
    IF              reduce using rule 25 (comandos -> declaracao_expressao .)
    WHILE           reduce using rule 25 (comandos -> declaracao_expressao .)
    RETURN          reduce using rule 25 (comandos -> declaracao_expressao .)
    ID              reduce using rule 25 (comandos -> declaracao_expressao .)
    apar            reduce using rule 25 (comandos -> declaracao_expressao .)
    numero          reduce using rule 25 (comandos -> declaracao_expressao .)
    fcha            reduce using rule 25 (comandos -> declaracao_expressao .)
    ELSE            reduce using rule 25 (comandos -> declaracao_expressao .)


state 54

    (26) comandos -> declaracao_composta .

    pv              reduce using rule 26 (comandos -> declaracao_composta .)
    acha            reduce using rule 26 (comandos -> declaracao_composta .)
    IF              reduce using rule 26 (comandos -> declaracao_composta .)
    WHILE           reduce using rule 26 (comandos -> declaracao_composta .)
    RETURN          reduce using rule 26 (comandos -> declaracao_composta .)
    ID              reduce using rule 26 (comandos -> declaracao_composta .)
    apar            reduce using rule 26 (comandos -> declaracao_composta .)
    numero          reduce using rule 26 (comandos -> declaracao_composta .)
    fcha            reduce using rule 26 (comandos -> declaracao_composta .)
    ELSE            reduce using rule 26 (comandos -> declaracao_composta .)


state 55

    (27) comandos -> declaracao_selecao .

    pv              reduce using rule 27 (comandos -> declaracao_selecao .)
    acha            reduce using rule 27 (comandos -> declaracao_selecao .)
    IF              reduce using rule 27 (comandos -> declaracao_selecao .)
    WHILE           reduce using rule 27 (comandos -> declaracao_selecao .)
    RETURN          reduce using rule 27 (comandos -> declaracao_selecao .)
    ID              reduce using rule 27 (comandos -> declaracao_selecao .)
    apar            reduce using rule 27 (comandos -> declaracao_selecao .)
    numero          reduce using rule 27 (comandos -> declaracao_selecao .)
    fcha            reduce using rule 27 (comandos -> declaracao_selecao .)
    ELSE            reduce using rule 27 (comandos -> declaracao_selecao .)


state 56

    (28) comandos -> declaracao_iteracao .

    pv              reduce using rule 28 (comandos -> declaracao_iteracao .)
    acha            reduce using rule 28 (comandos -> declaracao_iteracao .)
    IF              reduce using rule 28 (comandos -> declaracao_iteracao .)
    WHILE           reduce using rule 28 (comandos -> declaracao_iteracao .)
    RETURN          reduce using rule 28 (comandos -> declaracao_iteracao .)
    ID              reduce using rule 28 (comandos -> declaracao_iteracao .)
    apar            reduce using rule 28 (comandos -> declaracao_iteracao .)
    numero          reduce using rule 28 (comandos -> declaracao_iteracao .)
    fcha            reduce using rule 28 (comandos -> declaracao_iteracao .)
    ELSE            reduce using rule 28 (comandos -> declaracao_iteracao .)


state 57

    (29) comandos -> declaracao_retorno .

    pv              reduce using rule 29 (comandos -> declaracao_retorno .)
    acha            reduce using rule 29 (comandos -> declaracao_retorno .)
    IF              reduce using rule 29 (comandos -> declaracao_retorno .)
    WHILE           reduce using rule 29 (comandos -> declaracao_retorno .)
    RETURN          reduce using rule 29 (comandos -> declaracao_retorno .)
    ID              reduce using rule 29 (comandos -> declaracao_retorno .)
    apar            reduce using rule 29 (comandos -> declaracao_retorno .)
    numero          reduce using rule 29 (comandos -> declaracao_retorno .)
    fcha            reduce using rule 29 (comandos -> declaracao_retorno .)
    ELSE            reduce using rule 29 (comandos -> declaracao_retorno .)


state 58

    (32) declaracao_expressao -> expressao . pv

    pv              shift and go to state 76


state 59

    (33) declaracao_expressao -> pv .

    pv              reduce using rule 33 (declaracao_expressao -> pv .)
    acha            reduce using rule 33 (declaracao_expressao -> pv .)
    IF              reduce using rule 33 (declaracao_expressao -> pv .)
    WHILE           reduce using rule 33 (declaracao_expressao -> pv .)
    RETURN          reduce using rule 33 (declaracao_expressao -> pv .)
    ID              reduce using rule 33 (declaracao_expressao -> pv .)
    apar            reduce using rule 33 (declaracao_expressao -> pv .)
    numero          reduce using rule 33 (declaracao_expressao -> pv .)
    fcha            reduce using rule 33 (declaracao_expressao -> pv .)
    ELSE            reduce using rule 33 (declaracao_expressao -> pv .)


state 60

    (34) declaracao_selecao -> IF . apar expressao fpar comandos DS

    apar            shift and go to state 77


state 61

    (66) fator -> apar . expressao fpar
    (37) expressao -> . variavel atr expressao
    (38) expressao -> . expressao_simples
    (44) variavel -> . ID V
    (45) expressao_simples -> . soma_expressao ES
    (50) soma_expressao -> . termo SE
    (53) termo -> . fator T
    (66) fator -> . apar expressao fpar
    (67) fator -> . variavel
    (68) fator -> . ativacao
    (69) fator -> . numero
    (72) ativacao -> . ID apar argumentos fpar

    ID              shift and go to state 66
    apar            shift and go to state 61
    numero          shift and go to state 71

    expressao                      shift and go to state 78
    variavel                       shift and go to state 64
    expressao_simples              shift and go to state 65
    soma_expressao                 shift and go to state 67
    termo                          shift and go to state 68
    fator                          shift and go to state 69
    ativacao                       shift and go to state 70

state 62

    (35) declaracao_iteracao -> WHILE . apar expressao fpar comandos

    apar            shift and go to state 79


state 63

    (36) declaracao_retorno -> RETURN . DR
    (42) DR -> . pv
    (43) DR -> . expressao pv
    (37) expressao -> . variavel atr expressao
    (38) expressao -> . expressao_simples
    (44) variavel -> . ID V
    (45) expressao_simples -> . soma_expressao ES
    (50) soma_expressao -> . termo SE
